--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,37 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-05 Tue 22:42]
+#+CAPTION: Clock summary at [2019-11-06 Wed 08:06]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *60:28* |       |       | 100.0 |
+| *Total time*                                              | *61:17* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 60:28   |       |       | 100.0 |
-| Active                                                    |         | 60:28 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   6.0 |
+| Stories                                                   | 61:17   |       |       | 100.0 |
+| Active                                                    |         | 61:17 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   5.9 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.7 |
-| Time spent producing coding videos                        |         |       |  0:30 |   0.8 |
-| Sprint and product backlog grooming                       |         |       |  4:40 |   7.7 |
-| Remove test model sanitizer                               |         |       |  0:20 |   0.6 |
+| Time spent producing coding videos                        |         |       |  0:53 |   1.4 |
+| Sprint and product backlog grooming                       |         |       |  5:06 |   8.3 |
+| Remove test model sanitizer                               |         |       |  0:20 |   0.5 |
 | Remove master headers                                     |         |       |  1:12 |   2.0 |
-| Fix the issues with tests in reference model              |         |       |  3:53 |   6.4 |
-| Update static strings to string views                     |         |       |  1:15 |   2.1 |
+| Fix the issues with tests in reference model              |         |       |  3:53 |   6.3 |
+| Update static strings to string views                     |         |       |  1:15 |   2.0 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.8 |
-| Create a "modeling" report                                |         |       |  4:56 |   8.2 |
+| Create a "modeling" report                                |         |       |  4:56 |   8.1 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.5 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.8 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.1 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.2 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.0 |
 | Error on duplicate references                             |         |       |  0:26 |   0.7 |
-| Generate model dependency graph                           |         |       |  1:55 |   3.2 |
+| Generate model dependency graph                           |         |       |  1:55 |   3.1 |
 | Make the building of the relational model conditional     |         |       |  0:23 |   0.6 |
-| Move registrar into assets                                |         |       |  5:29 |   9.1 |
+| Move registrar into assets                                |         |       |  5:29 |   8.9 |
 | Fix compilation errors in nightly                         |         |       |  0:24 |   0.7 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  16.5 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  16.3 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.2 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.3 |
-| Add relational tracing support                            |         |       |  4:48 |   7.9 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.2 |
+| Add relational tracing support                            |         |       |  4:48 |   7.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -220,6 +220,7 @@ Time spent creating the demo and presentation.
 
 *** STARTED Time spent producing coding videos                        :story:
     :LOGBOOK:
+    CLOCK: [2019-11-05 Tue 22:43]--[2019-11-05 Tue 23:06] =>  0:23
     CLOCK: [2019-11-05 Tue 21:30]--[2019-11-05 Tue 22:00] =>  0:30
     :END:
 
@@ -228,6 +229,7 @@ actually doing any development related activities.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-11-06 Wed 07:40]--[2019-11-06 Wed 08:06] =>  0:26
     CLOCK: [2019-11-05 Tue 22:25]--[2019-11-05 Tue 22:42] =>  0:17
     CLOCK: [2019-11-01 Fri 11:01]--[2019-11-01 Fri 11:18] =>  0:17
     CLOCK: [2019-10-29 Tue 08:01]--[2019-10-29 Tue 08:37] =>  0:36
