engine: code-generate context

--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,37 +12,39 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-06 Wed 08:06]
+#+CAPTION: Clock summary at [2019-11-06 Wed 18:15]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *61:17* |       |       | 100.0 |
+| *Total time*                                              | *62:07* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 61:17   |       |       | 100.0 |
-| Active                                                    |         | 61:17 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   5.9 |
+| Stories                                                   | 62:07   |       |       | 100.0 |
+| Active                                                    |         | 62:07 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   5.8 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.7 |
 | Time spent producing coding videos                        |         |       |  0:53 |   1.4 |
-| Sprint and product backlog grooming                       |         |       |  5:06 |   8.3 |
+| Sprint and product backlog grooming                       |         |       |  5:06 |   8.2 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.5 |
-| Remove master headers                                     |         |       |  1:12 |   2.0 |
+| Remove master headers                                     |         |       |  1:12 |   1.9 |
 | Fix the issues with tests in reference model              |         |       |  3:53 |   6.3 |
 | Update static strings to string views                     |         |       |  1:15 |   2.0 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.8 |
-| Create a "modeling" report                                |         |       |  4:56 |   8.1 |
+| Create a "modeling" report                                |         |       |  4:56 |   7.9 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.5 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.8 |
-| Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.1 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   9.0 |
+| Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.0 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   8.9 |
 | Error on duplicate references                             |         |       |  0:26 |   0.7 |
 | Generate model dependency graph                           |         |       |  1:55 |   3.1 |
 | Make the building of the relational model conditional     |         |       |  0:23 |   0.6 |
-| Move registrar into assets                                |         |       |  5:29 |   8.9 |
-| Fix compilation errors in nightly                         |         |       |  0:24 |   0.7 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  16.3 |
+| Make all transform contexts code-generated                |         |       |  0:08 |   0.2 |
+| Move registrar into assets                                |         |       |  5:29 |   8.8 |
+| Fix compilation errors in nightly                         |         |       |  0:24 |   0.6 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  16.1 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.2 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.2 |
-| Add relational tracing support                            |         |       |  4:48 |   7.8 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.0 |
+| Add relational tracing support                            |         |       |  4:48 |   7.7 |
+| Consider creating a test build for all facets             |         |       |  0:42 |   1.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -656,6 +658,15 @@ configuration.
 We should also tell the users that dogen was built without relational
 support.
 
+*** COMPLETED Make all transform contexts code-generated              :story:
+    CLOSED: [2019-11-06 Wed 18:15]
+    :LOGBOOK:
+    CLOCK: [2019-11-06 Wed 18:07]--[2019-11-06 Wed 18:15] =>  0:08
+    :END:
+
+Try generating the engine context, it seems there is no obvious reason
+for it not to work.
+
 *** STARTED Move registrar into assets                                :story:
     :LOGBOOK:
     CLOCK: [2019-10-24 Thu 08:20]--[2019-10-24 Thu 08:43] =>  0:23
@@ -993,7 +1004,11 @@ runs. The schema should be designed with this in mind.
 
 ***
 
-*** Consider creating a test build for all facets                     :story:
+*** STARTED Consider creating a test build for all facets             :story:
+    :LOGBOOK:
+    CLOCK: [2019-11-06 Wed 17:49]--[2019-11-06 Wed 18:06] =>  0:17
+    CLOCK: [2019-11-06 Wed 08:07]--[2019-11-06 Wed 08:32] =>  0:19
+    :END:
 
 We can't afford to generate test code in Dogen for the continuous
 builds because we don't have enough build time to compile all of the
@@ -1007,17 +1022,22 @@ Notes:
 - create a new command line flag: =variabulity-override=
 - it takes a triplet in the form of
 
-: ELEMENT_ID:KEY=VALUE
+: MODEL_NAME,ELEMENT_NAME,ATTRIBUTE_NAME,KEY,VALUE
 
-- we parse these triplets into a container and then use it in the
+- we parse these tuples into a container and then use it in the
   variability transforms.
-- for scalar value types we merely override the value.
-- for collections we push back.
-- if we cannot find the target element ID we throw.
-- if we find the element more than once we throw.
-- note that the ELEMENT_ID must be a fully qualified path to the
-  element.
-- we must try to find the element on all models.
+- we need a data structure that reflects the topology: global,
+  element, property. It must be keyed by model name, element name,
+  attribute name.
+- the command line option is parsed and expanded into this new data
+  structure. The data structure is kept in injection context. Just
+  before calling the configuration factory, we need to locate the
+  appropriate overrides. We supply these to the configuration factory.
+- the factory takes the appropriate decision:
+  - for scalar value types we merely override the value.
+  - for collections we push back.
+- we should also mark unused overrides and throw if there are any. We
+  should record the original override string.
 - the remainder of variability processing will work as at present. We
   just must ensure we override prior to any profile merging/expansion.
 
@@ -1126,6 +1146,20 @@ alternative is to create these tests on the fly:
   serialise.
 
 During the transition phase, we will remove all of the existing tests.
+
+*** Create a chain to encapsulate variability transforms              :story:
+
+At present we are using individual variability transforms in the
+engine, and interspersing those with other transforms. A nicer way is
+to have a chain in variability that takes in a configuration model set
+and runs a chain against it.
+
+Actually we can only encapsulate two transforms:
+
+- profile_binding_transform
+- profile_repository_transform
+
+Still, its worthwhile doing it.
 
 *** Generate ORM tests                                                :story:
 
