--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-06 Wed 18:15]
+#+CAPTION: Clock summary at [2019-11-06 Wed 18:19]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *62:07* |       |       | 100.0 |
+| *Total time*                                              | *62:10* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 62:07   |       |       | 100.0 |
-| Active                                                    |         | 62:07 |       | 100.0 |
+| Stories                                                   | 62:10   |       |       | 100.0 |
+| Active                                                    |         | 62:10 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  3:36 |   5.8 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.7 |
 | Time spent producing coding videos                        |         |       |  0:53 |   1.4 |
 | Sprint and product backlog grooming                       |         |       |  5:06 |   8.2 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.5 |
 | Remove master headers                                     |         |       |  1:12 |   1.9 |
-| Fix the issues with tests in reference model              |         |       |  3:53 |   6.3 |
+| Fix the issues with tests in reference model              |         |       |  3:53 |   6.2 |
 | Update static strings to string views                     |         |       |  1:15 |   2.0 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.8 |
 | Create a "modeling" report                                |         |       |  4:56 |   7.9 |
@@ -44,7 +44,7 @@
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.2 |
 | Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.0 |
 | Add relational tracing support                            |         |       |  4:48 |   7.7 |
-| Consider creating a test build for all facets             |         |       |  0:42 |   1.1 |
+| Consider creating a test build for all facets             |         |       |  0:45 |   1.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1006,6 +1006,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Consider creating a test build for all facets             :story:
     :LOGBOOK:
+    CLOCK: [2019-11-06 Wed 18:16]--[2019-11-06 Wed 18:19] =>  0:03
     CLOCK: [2019-11-06 Wed 17:49]--[2019-11-06 Wed 18:06] =>  0:17
     CLOCK: [2019-11-06 Wed 08:07]--[2019-11-06 Wed 08:32] =>  0:19
     :END:
