--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-06 Wed 19:05]
+#+CAPTION: Clock summary at [2019-11-06 Wed 22:57]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *62:30* |       |       | 100.0 |
+| *Total time*                                              | *62:46* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 62:30   |       |       | 100.0 |
-| Active                                                    |         | 62:30 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   5.8 |
+| Stories                                                   | 62:46   |       |       | 100.0 |
+| Active                                                    |         | 62:46 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   5.7 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.6 |
 | Time spent producing coding videos                        |         |       |  0:53 |   1.4 |
-| Sprint and product backlog grooming                       |         |       |  5:06 |   8.2 |
+| Sprint and product backlog grooming                       |         |       |  5:06 |   8.1 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.5 |
 | Remove master headers                                     |         |       |  1:12 |   1.9 |
 | Fix the issues with tests in reference model              |         |       |  3:53 |   6.2 |
@@ -33,18 +33,18 @@
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.5 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.8 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.0 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   8.9 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   8.8 |
 | Error on duplicate references                             |         |       |  0:26 |   0.7 |
 | Generate model dependency graph                           |         |       |  1:55 |   3.1 |
 | Make the building of the relational model conditional     |         |       |  0:23 |   0.6 |
 | Make all transform contexts code-generated                |         |       |  0:08 |   0.2 |
-| Move registrar into assets                                |         |       |  5:29 |   8.8 |
+| Move registrar into assets                                |         |       |  5:29 |   8.7 |
 | Fix compilation errors in nightly                         |         |       |  0:24 |   0.6 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  16.0 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  15.9 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.2 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   9.0 |
-| Add relational tracing support                            |         |       |  4:48 |   7.7 |
-| Consider creating a test build for all facets             |         |       |  1:05 |   1.7 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   8.9 |
+| Add relational tracing support                            |         |       |  4:48 |   7.6 |
+| Consider creating a test build for all facets             |         |       |  1:21 |   2.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1006,6 +1006,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Consider creating a test build for all facets             :story:
     :LOGBOOK:
+    CLOCK: [2019-11-06 Wed 22:41]--[2019-11-06 Wed 22:57] =>  0:16
     CLOCK: [2019-11-06 Wed 18:20]--[2019-11-06 Wed 18:40] =>  0:20
     CLOCK: [2019-11-06 Wed 18:16]--[2019-11-06 Wed 18:19] =>  0:03
     CLOCK: [2019-11-06 Wed 17:49]--[2019-11-06 Wed 18:06] =>  0:17
