--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-06 Wed 23:45]
+#+CAPTION: Clock summary at [2019-11-06 Wed 23:58]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *63:31* |       |       | 100.0 |
+| *Total time*                                              | *63:43* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 63:31   |       |       | 100.0 |
-| Active                                                    |         | 63:31 |       | 100.0 |
+| Stories                                                   | 63:43   |       |       | 100.0 |
+| Active                                                    |         | 63:43 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  3:36 |   5.7 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.6 |
 | Time spent producing coding videos                        |         |       |  0:53 |   1.4 |
@@ -29,7 +29,7 @@
 | Fix the issues with tests in reference model              |         |       |  3:53 |   6.1 |
 | Update static strings to string views                     |         |       |  1:15 |   2.0 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.7 |
-| Create a "modeling" report                                |         |       |  4:56 |   7.8 |
+| Create a "modeling" report                                |         |       |  4:56 |   7.7 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.4 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.8 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.0 |
@@ -43,8 +43,8 @@
 | Upgrade to boost 1.70                                     |         |       | 10:00 |  15.7 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.2 |
 | Org-mode as a carrier format for modeling                 |         |       |  5:37 |   8.8 |
-| Add relational tracing support                            |         |       |  4:48 |   7.6 |
-| Consider creating a test build for all facets             |         |       |  2:06 |   3.3 |
+| Add relational tracing support                            |         |       |  4:48 |   7.5 |
+| Consider creating a test build for all facets             |         |       |  2:18 |   3.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1006,6 +1006,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Consider creating a test build for all facets             :story:
     :LOGBOOK:
+    CLOCK: [2019-11-06 Wed 23:46]--[2019-11-06 Wed 23:58] =>  0:12
     CLOCK: [2019-11-06 Wed 23:42]--[2019-11-06 Wed 23:45] =>  0:03
     CLOCK: [2019-11-06 Wed 23:15]--[2019-11-06 Wed 23:41] =>  0:26
     CLOCK: [2019-11-06 Wed 22:58]--[2019-11-06 Wed 23:14] =>  0:16
