--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,15 +12,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-06 Wed 23:58]
+#+CAPTION: Clock summary at [2019-11-07 Thu 08:19]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *63:43* |       |       | 100.0 |
+| *Total time*                                              | *63:48* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 63:43   |       |       | 100.0 |
-| Active                                                    |         | 63:43 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   5.7 |
+| Stories                                                   | 63:48   |       |       | 100.0 |
+| Active                                                    |         | 63:48 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   5.6 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.6 |
 | Time spent producing coding videos                        |         |       |  0:53 |   1.4 |
 | Sprint and product backlog grooming                       |         |       |  5:06 |   8.0 |
@@ -43,7 +43,7 @@
 | Upgrade to boost 1.70                                     |         |       | 10:00 |  15.7 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.2 |
 | Org-mode as a carrier format for modeling                 |         |       |  5:37 |   8.8 |
-| Add relational tracing support                            |         |       |  4:48 |   7.5 |
+| Add relational tracing support                            |         |       |  4:53 |   7.7 |
 | Consider creating a test build for all facets             |         |       |  2:18 |   3.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -836,6 +836,7 @@ Links:
 
 *** STARTED Add relational tracing support                            :story:
     :LOGBOOK:
+    CLOCK: [2019-11-07 Thu 08:14]--[2019-11-07 Thu 08:19] =>  0:05
     CLOCK: [2019-11-01 Fri 11:18]--[2019-11-01 Fri 11:54] =>  0:36
     CLOCK: [2019-10-29 Tue 18:07]--[2019-10-29 Tue 18:30] =>  0:23
     CLOCK: [2019-10-29 Tue 17:46]--[2019-10-29 Tue 18:06] =>  0:20
