--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,38 +12,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-07 Thu 20:10]
+#+CAPTION: Clock summary at [2019-11-07 Thu 20:40]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *65:18* |       |       | 100.0 |
+| *Total time*                                              | *65:47* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 65:18   |       |       | 100.0 |
-| Active                                                    |         | 65:18 |       | 100.0 |
+| Stories                                                   | 65:47   |       |       | 100.0 |
+| Active                                                    |         | 65:47 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  3:36 |   5.5 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.5 |
-| Time spent producing coding videos                        |         |       |  0:53 |   1.4 |
+| Time spent producing coding videos                        |         |       |  0:53 |   1.3 |
 | Sprint and product backlog grooming                       |         |       |  5:06 |   7.8 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.5 |
 | Remove master headers                                     |         |       |  1:12 |   1.8 |
 | Fix the issues with tests in reference model              |         |       |  3:53 |   5.9 |
 | Update static strings to string views                     |         |       |  1:15 |   1.9 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.6 |
-| Create a "modeling" report                                |         |       |  4:56 |   7.6 |
+| Create a "modeling" report                                |         |       |  4:56 |   7.5 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.4 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.7 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   1.0 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   8.5 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   8.4 |
 | Error on duplicate references                             |         |       |  0:26 |   0.7 |
 | Generate model dependency graph                           |         |       |  1:55 |   2.9 |
 | Make the building of the relational model conditional     |         |       |  0:23 |   0.6 |
 | Make all transform contexts code-generated                |         |       |  0:08 |   0.2 |
-| Move registrar into assets                                |         |       |  5:29 |   8.4 |
+| Move registrar into assets                                |         |       |  5:29 |   8.3 |
 | Fix compilation errors in nightly                         |         |       |  0:24 |   0.6 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  15.3 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  15.2 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.1 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   8.6 |
-| Add relational tracing support                            |         |       |  6:23 |   9.8 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   8.5 |
+| Add relational tracing support                            |         |       |  6:52 |  10.4 |
 | Consider creating a test build for all facets             |         |       |  2:18 |   3.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -836,6 +836,7 @@ Links:
 
 *** STARTED Add relational tracing support                            :story:
     :LOGBOOK:
+    CLOCK: [2019-11-07 Thu 20:11]--[2019-11-07 Thu 20:40] =>  0:29
     CLOCK: [2019-11-07 Thu 19:55]--[2019-11-07 Thu 20:10] =>  0:15
     CLOCK: [2019-11-07 Thu 18:31]--[2019-11-07 Thu 18:33] =>  0:02
     CLOCK: [2019-11-07 Thu 17:41]--[2019-11-07 Thu 18:30] =>  0:49
